# state-machine

./: Cargo.toml  index.html  readme.md  serve.sh
.github/workflows/: deploy.yml
src/: data.rs  lib.rs  main.rs  shader.wgsl  utils.rs
src/resources/: buffer.rs  camera.rs  font.rs  mod.rs
