[package]
name = "drawing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.94"
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4.22"
wgpu = "23.0.1"
winit = "0.30.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0.1", features = ["webgl"]}
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
